space for non accordion rows fixed, right align columns done

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,8 @@ input, textarea, select, button {
   font-size: 12px;
 }
 
+/* table css*/
+
 .level-decider {
   width: 100%;
 }
@@ -79,42 +81,35 @@ input, textarea, select, button {
   justify-content: flex-end;
 }
 
-.gsr-column {
-  /* flex: 1;  */
-  width: 200px;
-  word-wrap: break-word;
-  padding: 5px;
-  flex-shrink: 0;
-  box-sizing: border-box;
-  transition: 0.3s;
+.gsr-row.gsr-accordionHeader {
+  box-shadow: 0px 2px 0px 0px #bbbaba;
 }
 
 .gsr-row>.gsr-column {
   border-top: 1px solid #e4e4e4;
   padding: 5px 5px;
   width: 15%;
-  /* min-height: 30px; */
-  align-items: center;
   display: flex;
+  flex-shrink: 0;
+  box-sizing: border-box;
+  transition: 0.3s;
+  align-items: center;
+  word-wrap: break-word;
 }
 
-.gsr-row>.gsr-column.gsr-column-rightAlign{
-  justify-content:flex-end;
-} 
+.gsr-column > .gsr-column-rightAlign {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end
+}
 
-#table-scroller .gsr-row>.gsr-column {
+.gsr-row.header>.gsr-column, .gsr-record-row>.gsr-column {
   border-right: 1px solid #f5f5f5;
 }
 
 .gsr-row:last-child>.gsr-column {
   border-bottom: 1px solid #e4e4e4;
 }
-
-/* .gsr-row>.gsr-column:not(.gsr-icon-column) {
-  padding: 5px 5px;
-  width: 15%;
-  min-height: 30px;
-} */
 
 .gsr-row>.gsr-column.companyColumns {
   padding-left: 20px;
@@ -124,19 +119,13 @@ input, textarea, select, button {
   flex: 1;
 }
 
-/* .gsr-row:before,.gsr-column:before {
-  content: "";
-  min-height:15px;
-  display:inline-block;
-} */
-
 .noResults {
   width: 100%;
   text-align: center;
   padding: 10px;
 }
 
-.gsr-icon-column {
+#table-scroller .gsr-icon-colmWidth {
   width: 30px !important;
   border-right: none !important;
 }
@@ -256,6 +245,12 @@ button:hover {
   padding: 5px;
 }
 
+.gsr-modal-content .gsr-table {
+  box-shadow: none;
+}
+
+/* column Table css */
+
 .columnGroup {
   display: flex;
   width: 50%;
@@ -279,6 +274,10 @@ button:hover {
   flex-flow: wrap;
 }
 
+/* column Table css ends*/
+
+/*tabs css */
+
 .tabsWrapper {
   position: relative;
   min-height: 200px;
@@ -294,13 +293,6 @@ button:hover {
   height: 400px;
 }
 
-.form-group {
-  height: 75px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .tab-footer {
   display: flex;
   flex-direction: row;
@@ -312,17 +304,22 @@ button:hover {
   margin: 10px;
 }
 
+/*tabs css ends here */
+
 .column-header {
   width: 100%;
+}
+
+.form-group {
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 fieldset {
   border-style: solid;
   border-width: 1px;
-}
-
-.gsr-modal-content .gsr-table {
-  box-shadow: none;
 }
 
 .details-pane {
@@ -345,9 +342,6 @@ fieldset {
   flex-direction: column;
   flex-flow: wrap;
   width: 25%;
-  /* padding: 10px; */
-  /* border: 1px solid black; */
-  /* flex: 1 0 auto; */
 }
 
 .fieldWrapper>div {
@@ -359,6 +353,8 @@ fieldset {
 .fieldWrapper>div.field-label {
   font-weight: bold;
 }
+
+/* icon css */
 
 gsr-icon {
   display: flex;
@@ -390,3 +386,5 @@ span.iconWrapper>span {
   margin-left: 3px;
   flex-direction: column;
 }
+
+/* icon css ends here */
